--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <meta http-equiv="refresh" content="1; URL=https://bishes-client-wtr3e.ondigitalocean.app/publish.html" />
+  <meta http-equiv="refresh" content="1; URL=https://bishes-client-wtr3e.ondigitalocean.app/publish.htm" />
 </head>
 <body>
-  <p>If you are not redirected, <a href="https://bishes-client-wtr3e.ondigitalocean.app/publish.html">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://bishes-client-wtr3e.ondigitalocean.app/publish.htm">click here</a>.</p>
 </body>
